@@ -1,4 +1,5 @@
 1.0.3:
+	- Fix setting dirtyness of library in "Rename from Key" (Jordy Potman)
 	- Reduce window clutter (Kai Willadsen)
 	- Italian translation (Michele Mattioni)
 	- Improve translatability of code (Kai Willadsen)
